...
    <ListView
        android:id="@+id/notifications_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/notifications_header"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notification_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bell_cog"
        android:backgroundTint="@color/lavender"

        app:layout_constraintTop_toTopOf="parent"
...
