<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--For home screen: replace image later -->
    <!--opens on launch but can't navigate back to it-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/title_home"
        android:visible="false" />

    <item
        android:id="@+id/navigation_user_events"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_user_events" />

    <item
        android:id="@+id/navigation_create_events"
        android:icon="@drawable/baseline_event_available_24"
        android:title="@string/title_create_events" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_user_profile" />
</menu>