<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="Entrant"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/entrant_switch"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="Organizer"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/organizer_switch"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:padding="10dp" />
    </LinearLayout>

</LinearLayout>