...
    <LinearLayout
        android:id="@+id/waitlist_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/registered_layout"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!--Button to open event QR code scan-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_qr_scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus"
        android:backgroundTint="@color/lavender"

        app:layout_constraintTop_toTopOf="parent"
...
