<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entrant_events_tab.QRCodeScannerActivity">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/zxing_barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.journeyapps.barcodescanner.DecoratedBarcodeView>

    <!-- Back/Cancel button as an overlay -->
    <Button
        android:id="@+id/qr_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:text="Cancel"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"/>
</RelativeLayout>
