<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Header for Create New Event -->
    <TextView
        android:id="@+id/create_new_event_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/periwinkle"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="Create New Event"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- FrameLayout containing ImageView and overlay elements -->
    <FrameLayout
        android:id="@+id/event_poster_frame"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/create_new_event_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- ImageView for event poster -->
        <ImageView
            android:id="@+id/edit_event_poster_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_poster" />

        <!-- Event Name Overlay at the Bottom -->
        <TextView
            android:id="@+id/event_name_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
        android:background="#80000000"
        android:padding="8dp"
        android:gravity="center"
        android:text="Event Name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

        <!-- Cancel button at the top left -->
        <ImageButton
            android:id="@+id/cancel_create_new_event_button"
            style="@style/XButtonStyle"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_gravity="top|start"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <!-- Add event poster button at the top right -->
        <ImageButton
            android:id="@+id/add_event_poster_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_multiple"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            app:tint="@android:color/white" />

    </FrameLayout>

    <!-- LinearLayout containing input fields -->
    <LinearLayout
        android:id="@+id/input_fields_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/event_poster_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_event_button">

        <!-- Event Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Event Name: " />

            <EditText
                android:id="@+id/edit_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />
        </LinearLayout>

        <!-- Event Capacity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Event Capacity: " />

            <EditText
                android:id="@+id/edit_event_capacity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20dp" />
        </LinearLayout>

        <!-- Waitlist Limit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_waitlist_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Set Waitlist Limit: " />

            <EditText
                android:id="@+id/edit_waitlist_limit_size"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20dp" />
        </LinearLayout>

        <!-- Geolocation Requirement -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_geolocation_requirement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Require Entrant Geolocation" />
        </LinearLayout>

        <!-- Event Description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:text="Event Description:" />

        <EditText
            android:id="@+id/edit_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

    </LinearLayout>

    <!-- Create Event button -->
    <Button
        android:id="@+id/create_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyleA"
        android:text="Create Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
