...

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/create_new_event_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/created_events_body"
        android:layout_width="match_parent"
...
            app:layout_constraintTop_toBottomOf="@id/create_event_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plus"
            android:backgroundTint="@color/lavender"

            app:layout_constraintTop_toTopOf="parent"
...
