...
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingBottom="8dp">

                <!-- Edit Roles Button -->
                <Button
                    android:id="@+id/edit_user_role_button"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Edit Roles" />

                <Button
                    android:id="@+id/save_profile_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="Save"
                    android:textColor="@color/marian_blue"
                    android:textSize="18sp" />
...
